--- a/MyLove/templates/principio.html
+++ b/MyLove/templates/principio.html
@@ -5,8 +5,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Projeto</title>
-  <link rel="stylesheet" href="/styles/style.css">
-  <link rel="stylesheet" href="/styles/reset.css">
+  <link rel="stylesheet" href="MyLove/styles/style.css">
+  <link rel="stylesheet" href="MyLove/styles/reset.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
@@ -22,27 +22,27 @@
   <main>
     <section class="container">
       <div class="card">
-        <img src="/assets/WhatsApp Image 2024-11-10 at 17.08.29.jpeg" alt="">
+        <img src="MyLove/assets/WhatsApp Image 2024-11-10 at 17.08.29.jpeg" alt="">
         <div class="card-desc">
           <p>Dividir a vida com você é uma dádiva!</p>
         </div>
       </div>
 
       <div class="card">
-        <img src="/assets/WhatsApp Image 2024-11-10 at 17.08.29 (1).jpeg" alt="">
+        <img src="MyLove/assets/WhatsApp Image 2024-11-10 at 17.08.29 (1).jpeg" alt="">
         <div class="card-desc">
           <p>Cada momento ao seu lado é mágico, independente do que estivermos fazendo. </p>
         </div>
       </div>
       <div class="card">
-        <img src="/assets/classicu 2023-07-09 091509.815.JPG" alt="">
+        <img src="MyLove/assets/classicu 2023-07-09 091509.815.JPG" alt="">
         <div class="card-desc">
           <p>Você fez e faz da minha vida o lugar mais feliz.</p>
         </div>
       </div>
 
       <div class="card">
-        <img src="/assets/classicu 2023-12-13 194701.029.JPG" alt="">
+        <img src="MyLove/assets/classicu 2023-12-13 194701.029.JPG" alt="">
         <div class="card-desc">
           <p>Eu te amo em cada detalhe, meu amor!</p>
         </div>
